<?xml version="1.0"?>
<package format="2">
    <name>pandar_rain_filter_visualizer</name>
    <version>1.0.0</version>
    <description>Pandar rain filter visualizer tool</description>

    <maintainer email="david.wong@tier4.jp">drwnz</maintainer>
    <license>Private</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>Curses</depend> 
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>nmea_msgs</depend>
    <depend>std_msgs</depend>
    <depend>libpcl-all</depend>
    <depend>boost</depend>
    <depend>rosbag</depend> 
    <depend>tf_conversions</depend>

</package>
